# equisim

./: README.md
Binaries/Linux/: EquiSim  libSKELETON.so.0.0.0  libvtkCommonColor-9.0.so.1  libvtkCommonComputationalGeometry-9.0.so.1  libvtkCommonMath-9.0.so.1  libvtkCommonMisc-9.0.so.1  libvtkCommonSystem-9.0.so.1  libvtkCommonTransforms-9.0.so.1  libvtkDICOMParser-9.0.so.1  libvtkFiltersGeometry-9.0.so.1  libvtkIOCore-9.0.so.1  libvtkIOLegacy-9.0.so.1  libvtkIOXMLParser-9.0.so.1  libvtkImagingFourier-9.0.so.1  libvtkImagingGeneral-9.0.so.1  libvtkImagingSources-9.0.so.1  libvtkInteractionStyle-9.0.so.1  libvtkParallelCore-9.0.so.1  libvtkParallelDIY-9.0.so.1  libvtkRenderingFreeType-9.0.so.1  libvtkRenderingUI-9.0.so.1  libvtkdoubleconversion-9.0.so.1  libvtkexpat-9.0.so.1  libvtkfreetype-9.0.so.1  libvtkglew-9.0.so.1  libvtkjpeg-9.0.so.1  libvtkjsoncpp-9.0.so.1  libvtkloguru-9.0.so.1  libvtklz4-9.0.so.1  libvtklzma-9.0.so.1  libvtkmetaio-9.0.so.1  libvtkpng-9.0.so.1  libvtkpugixml-9.0.so.1  libvtksys-9.0.so.1  libvtktiff-9.0.so.1  libvtkzlib-9.0.so.1
Binaries/Linux/statmodel_v4/: statmodel_v4_2.vtp  statmodel_v4_5.vtp  statmodel_v4_6.vtp  statmodel_v4_7.vtp
EquiSim-gui/: CMakeLists.txt
EquiSim-gui/GUI/: CMakeLists.txt
EquiSim-gui/GUI/cmake/: CPackConfig.cmake  GUIConfig.cmake
EquiSim-gui/GUI/doc/: release-notes.dox  technical-overview.dox  versioning.txt  welcome.dox
EquiSim-gui/GUI/include/: CMakeLists.txt
EquiSim-gui/GUI/include/GUI/: CorrelationFileReader.h  Defs.h  Version.h.in
EquiSim-gui/GUI/src/: CMakeLists.txt  CorrelationFileReader.cpp  DLLDefines.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
EquiSim-gui/InputData/: armature_mean.bvh  regressioncoeff.txt  statmodel_v4.vtm
EquiSim-gui/InputData/statmodel_v4/: statmodel_v4_1.vtp  statmodel_v4_10.vtp  statmodel_v4_11.vtp  statmodel_v4_4.vtp  statmodel_v4_8.vtp
EquiSim-gui/SKELETON/: CMakeLists.txt
EquiSim-gui/SKELETON/cmake/: CPackConfig.cmake  SKELETONConfig.cmake
EquiSim-gui/SKELETON/include/: CMakeLists.txt
EquiSim-gui/SKELETON/include/SKELETON/: DLLDefines.h  DeformRigidSurface.h  Defs.h  Version.h.in  vtkBVHReader.h  vtkBlockColorSelector.h  vtkSkeleton.h  vtkSkeletonVisualiser.h  vtkStatModelReader.h
EquiSim-gui/SKELETON/src/: CMakeLists.txt  DeformRigidSurface.cpp  vtkBVHReader.cxx  vtkBlockColorSelector.cpp  vtkSkeleton.cpp  vtkSkeletonVisualiser.cpp  vtkStatModelReader.cpp
EquiSim-gui/cmake/: FindOptiX.cmake
